<resources>
    <string name="app_name" translatable="false">marriage_list</string>

    <string name="user_email">Mail Address</string>
    <string name="user_password">Password</string>
    <string name="user_name">Name</string>

    <!-- BUTTONS -->
    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="done">Done</string>
    <string name="ok">Okay</string>
    <string name="save">Save</string>

    <!-- MESSAGES -->
    <string name="success">Process Success</string>
    <string name="fail">Process Failed</string>
    <string name="general_fail">An unknown error occurred. Please try again later.</string>
    <string name="register_success">Registration done successfully. You can login with your information.</string>
    <string name="register_fail">Registration failed. Please try again later.</string>
    <string name="login_fail">Login failed. Please try again later.</string>
    <string name="check_info">Mail address or password can not be empty.</string>

    <!-- fragment_main_flow -->
    <string name="bottom_navigation_profile">Profile</string>
    <string name="bottom_navigation_messages">Messages</string>
    <string name="bottom_navigation_discover">Discover</string>
    <string name="bottom_navigation_home_page">Home Page</string>


    <!-- PAGE NAMES -->
    <string name="home_page">Home Page</string>
    <string name="profile_page">Profile</string>
    <string name="upload_product_page">Upload</string>
    <string name="discover_page">Discover</string>
    <string name="messages_page">Messages</string>

    <!-- PRODUCT -->
    <string name="planned_count">Planned number of purchases</string>
    <string name="purchase_count">Number of purchased</string>
    <string name="brand">Brand</string>
    <string name="price">Price per unit</string>
    <string name="purchase_date">Purchase date</string>
    <string name="product_link">Product link</string>
    <string name="is_bought">Is it bought?</string>
    <string name="is_wanted">Is it wanted?</string>
</resources>